--- a/firebase.json
+++ b/firebase.json
@@ -5,13 +5,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
-  },
-  "emulators": {
-    "dataconnect": {
-    }
-  },
-  "dataconnect": {
-    "source": "dataconnect"
   }
 }
